add galactictimepiece class (test)

--- a/celestial-day-clock/celestial-day-clock.vcxproj
+++ b/celestial-day-clock/celestial-day-clock.vcxproj
@@ -128,11 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="celestialdayclock.cpp" />
+    <ClCompile Include="galactictimepiece.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="orrerytimepiece.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="celestialdayclock.h" />
+    <ClInclude Include="galactictimepiece.h" />
     <ClInclude Include="numeric_limits.h" />
     <ClInclude Include="orrerytimepiece.h" />
   </ItemGroup>
