add celestialtimepiece base class

--- a/celestial-day-clock/celestial-day-clock.vcxproj
+++ b/celestial-day-clock/celestial-day-clock.vcxproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="celestialdayclock.h" />
+    <ClInclude Include="celestialtimepiece.h" />
     <ClInclude Include="galactictimepiece.h" />
     <ClInclude Include="numeric_limits.h" />
     <ClInclude Include="orrerytimepiece.h" />
